--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   provider: ^6.1.2
+  stop_watch_timer: ^3.1.1
 
 dev_dependencies:
   flutter_test:
