--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   path_provider: ^2.1.2
   http: ^1.1.0
   intl: ^0.19.0
+  animated_tree_view: ^2.2.0
+  shared_preferences: ^2.2.2
+  table_calendar: ^3.1.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
