--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.attention">
     <application
         android:label="attention"
         android:name="${applicationName}"
@@ -29,5 +30,13 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+    
+        <service
+            android:name=".TimerService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
     </application>
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 </manifest>
