--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.2.2
   table_calendar: ^3.1.1
   carousel_slider: ^4.2.1
+  flutter_local_notifications: ^17.0.1
 
 dev_dependencies:
   flutter_test:
