--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_local_notifications: ^17.0.1
   audioplayers: ^5.2.1
+  timeago: ^3.6.1
 
 dev_dependencies:
   flutter_test:
